data-git/worldmodel/worldmodel/test/requirement-test-durative-actions.p.pddl.Maxplan.stderr

requirement-test-durative-actions.d.pddl: syntax error in line 3, ':DURATIVE-ACTIONS':
requirement %s not supported by this IPP version :DURATIVE-ACTIONS
