data-git/worldmodel/worldmodel/test/requirement-test-durative-actions.p.pddl.LPG.sol.SOL

; Version LPG-td-1.0
; Seed 22400320
; Command line: /var/lib/myfrdcsa/codebases/internal/verber/data/planner-library/lpg-td-1.0 -o requirement-test-durative-actions.d.pddl -f requirement-test-durative-actions.p.pddl -out /var/lib/myfrdcsa/codebases/internal/verber/data/worldmodel/test/requirement-test-durative-actions.p.pddl.LPG.sol -speed 
; Problem requirement-test-durative-actions.p.pddl
; Actions having STRIPS duration
; Time 0.00
; Search time 0.00
; Parsing time 0.00
; Mutex time 0.00
; NrActions 1

0:   (ACTION1 OBJ1 OBJ2) [1]
